--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,33 +1,25 @@
 .container-button {
-  margin-top: 5% !important;
-  width: 12%;
-  margin: auto;
-  background-color: black;
+  /* margin-top: 5% !important; */
+  width: 76%;
+  /* margin: auto; */
+  /* background-color: black; */
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 5px;
-  border-radius: 50px;
-  border: 4px solid white;
-  border-style: double;
+  /* padding: 5px; */
+  /* border-radius: 50px; */
+  /* border: 4px solid white; */
+  /* border-style: double; */
 }
 .print-edit-container {
-  margin-top: 5% !important;
-  width: 40%;
+  width: 49.9%;
   margin: auto;
-  background-color: black;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 5px;
-  margin: 0 2% 0 2%;
-  border-radius: 50px;
-  border: 4px solid white;
-  border-style: double;
 }
 .button-edit,
-.button-print,
-.button {
+.button-print {
   width: 100%;
   background-color: black;
   border: none;
@@ -35,10 +27,30 @@
   font-size: 16px;
   cursor: pointer;
 }
-button:disabled {
+.btn {
+  width: 100%;
+  display: flex;
+  color: white;
+  /* background-color: rgb(7, 98, 101); */
+  background-color:  rgba(191, 77, 236, 0.8) !important;
+  justify-content: center;
+  border-radius: 0;
+  font-weight: 200;
+}
+.btn:hover {
+  width: 100%;
+  display: flex;
+  font-weight: 300;
+  color: white;
+  /* background-color: rgb(7, 98, 101); */
+  background-color: rgba(198, 99, 237, 0.989) !important;
+  justify-content: center;
+  border-radius: 0;
+}
+/* button:disabled {
   opacity: 0.5;
   cursor: not-allowed;
-}
+} */
 .stop {
   color: white;
 }
