--- a/src/components/CustomCategoryForm.css
+++ b/src/components/CustomCategoryForm.css
@@ -1,17 +1,47 @@
 .custom-form-container {
     width: 30%;
     margin: auto;
+    height: 160px;
 }
 .custom-form {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 2%;
-    height: 200px;
-    background-color: rgb(0, 0, 0, 0.6);
+    /* height: 160px; */
+    background-color: rgb(0, 0, 0);
     border-radius: 10px;
     margin-bottom: 5%;
+    opacity: 0;
+    animation: fadeIn 0.3s ease-in-out forwards;
+}
+.close-container {
+    width: 100%;
+     display: flex !important;
+     justify-content: flex-end !important;
+}
+.plus-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2%;
+    /* height: 200px; */
+    /* background-color: rgb(0, 0, 0, 0.6); */
+    border-radius: 10px;
+    margin-bottom: 5%;
+    opacity: 0;
+    /* color: white; */
+      animation: fadeIn 0.3s ease-in-out forwards;
+}
+.plus {
+    color: green;
+    width: 10%;
+    height: auto;
+}
+.close {
+    width: 6%;
+    height: auto;
 }
 .form-input {
     text-transform: uppercase;
