--- a/src/components/SelectedCategoryItems.css
+++ b/src/components/SelectedCategoryItems.css
@@ -1,32 +1,34 @@
 .preview-item-container {
-    background-color: black;
-    padding: 2%;
-    opacity: 0;
-    animation: fadeIn 0.3s ease-in-out forwards;
+  width: 98%; /* Aligns with the dark background color of non consolidated view*/
+  margin: auto; /* Aligns with the dark background color of non consolidated view*/
+  background-color: black;
+  padding: 2%;
+  opacity: 0;
+  animation: fadeIn 0.3s ease-in-out forwards;
 }
 .preview-item-container-out {
-    background-color: black;
-    padding: 2%;
-    opacity: 1;
-    animation: fadeOut 0.3s ease-in-out forwards;
+  background-color: black;
+  padding: 2%;
+  opacity: 1;
+  animation: fadeOut 0.3s ease-in-out forwards;
 }
 .price-input {
-    height: 30px;
-    font-style: oblique;
+  height: 30px;
+  font-style: oblique;
 }
 @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+  from {
+    opacity: 0;
   }
+  to {
+    opacity: 1;
+  }
+}
 @keyframes fadeOut {
-    from {
-      opacity: 1;
-    }
-    to {
-      opacity: 0;
-    }
+  from {
+    opacity: 1;
   }
+  to {
+    opacity: 0;
+  }
+}
