Worked on compact view in Categories. Now user is able to see selected items in a compact view for each category vs toggle mode

--- a/src/components/CustomCategoriesMenu.css
+++ b/src/components/CustomCategoriesMenu.css
@@ -56,6 +56,9 @@
       -webkit-print-color-adjust: exact;
       print-color-adjust: exact;
     }
+    #root {
+      padding: 0 !important;
+    }
     .app-container {
         padding: 0 !important;
       }
