--- a/src/components/Sharables.css
+++ b/src/components/Sharables.css
@@ -61,7 +61,7 @@
     padding: 0 !important;
     margin: 0 !important;
   }
-  .container-final-step {
+  /* .container-final-step {
     display: flex;
     gap: 20px;
     width: auto;
@@ -70,7 +70,7 @@
     padding: 0;
     border-radius: 0;
     box-shadow: none;
-  }
+  } */
   .print {
     display: block;
   }
