--- a/src/components/Input.css
+++ b/src/components/Input.css
@@ -19,7 +19,7 @@
     0 0 40px rgb(191, 77, 236), 0 0 80px #bf4dec;
 }
 /* ----------- Preview Tool ------------ */
-.color-inputs {
+/* .color-inputs {
   display: inline-block;
   width: 16%;
   height: 2%;
@@ -34,7 +34,8 @@
   );
   border: 1px solid #ddd;
   margin-bottom: 3px;
-}
+} */
+
 /* -----------  CustomCategoriesMenu ----------------- */
 .menu-color-inputs {
   display: inline-block;
@@ -62,6 +63,6 @@
 .input-style {
   cursor: pointer;
   padding: 2px;
-  width: 15%;
+  width: 18%;
   height: 30px;
 }
