--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,15 +1,8 @@
 .container-button {
-  /* margin-top: 5% !important; */
   width: 76%;
-  /* margin: auto; */
-  /* background-color: black; */
   display: flex;
   align-items: center;
   justify-content: center;
-  /* padding: 5px; */
-  /* border-radius: 50px; */
-  /* border: 4px solid white; */
-  /* border-style: double; */
 }
 .print-edit-container {
   width: 49.9%;
@@ -17,6 +10,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.img-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 70px !important;
+  height: auto;
+  margin-left: 5px;
+}
+.background {
+  width: 100% !important;
 }
 .button-edit,
 .button-print {
@@ -47,10 +51,6 @@
   justify-content: center;
   border-radius: 0;
 }
-/* button:disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-} */
 .stop {
   color: white;
 }
