--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -5,9 +5,10 @@
   text-align: center;
   width: 400px;
   height: 400px;
+  border-radius: 50%;
   background: radial-gradient(
     circle,
-    rgba(217, 122, 255, 0.989) 10%,
+    rgba(169, 25, 225, 0.989) 10%,
     rgba(0, 0, 0, 0) 70%
   );
   /* mix-blend-mode: screen; */
@@ -63,7 +64,7 @@
   top: 45%;
 }
 .menu-tool {
-  padding-top: 35%;
+  padding-top: 40%;
 }
 .restart-tool {
   padding-top: 27%;
