final before refactoring

--- a/src/components/CustomMenuView.css
+++ b/src/components/CustomMenuView.css
@@ -19,7 +19,7 @@
     }
     .custom-menu-items-container {
         margin: auto !important;
-        padding: 0 !important;
+        /* padding: 0 !important; */
         /* margin: 0 !important; */
     }
   }
