--- a/src/components/CustomCategoriesMenu.css
+++ b/src/components/CustomCategoriesMenu.css
@@ -66,7 +66,7 @@
       font-family: Arial, sans-serif;
       position: relative;
       width: 100% !important;
-      padding: 0 !important;
+      /* padding: 0 !important; */
       margin: auto !important;
     }
     .container-final-step {
