--- a/src/components/Sharables.css
+++ b/src/components/Sharables.css
@@ -58,7 +58,7 @@
     font-family: Arial, sans-serif;
     position: relative;
     width: 100%;
-    padding: 0 !important;
+    /* padding: 0 !important; */
     margin: 0 !important;
   }
   /* .container-final-step {
