--- a/src/components/InputBar.css
+++ b/src/components/InputBar.css
@@ -3,7 +3,7 @@
   /* border: 2px solid yellow; */
   align-items: center;
   height: 25px;
-  
+  z-index: 5;
 }
 /* ---------------- InputBar ---------------- */
 
