--- a/src/components/MenuSizeModal.css
+++ b/src/components/MenuSizeModal.css
@@ -1,13 +1,4 @@
-/* Modal backdrop */
-/* .modal-backdrop {
-    position: fixed;
-    inset: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.5);
-  } */
-  
+
   .modal-container {
     /* border: solid 1px white; */
     position: fixed; /* Ensures the modal is fixed relative to the viewport */
@@ -23,10 +14,15 @@
     color: black;
   }
   .window {
+    width: 50%;
+    margin: auto;
     display: flex;
     flex-direction: column;
     background-color: rgb(241, 233, 221);
     color: cream;
     padding: 2% 5% 2% 5%;
   }
-  
+  /* .message {
+    padding-top: 5px !important;
+    padding-bottom: 5px !important;
+  } */
