--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Pewter Corroded";
+  font-family: "Pewter Corroted";
   src: url("../assets/fonts/PewterDEMO-KCFonts.ttf") format("truetype");
   margin: 0;
   padding: 0;
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   padding: 0 1% 0 1%;
-  /* font-family: "Pewter Corroded"; */
+  /* font-family: "Pewter Corroted"; */
   /* letter-spacing: 1px; */
   font-weight: 600;
 }
