--- a/src/components/CustomCategoriesMenu.css
+++ b/src/components/CustomCategoriesMenu.css
@@ -1,106 +1,103 @@
 @font-face {
-  font-family: 'Pewter Corroted';
-  src: url('../assets/fonts/pewter-corroted/font.woff2') format('woff2'),
-       url('../assets/fonts/pewter-corroted/font.woff') format('woff');
+  font-family: "Pewter Corroted";
+  src: url("../assets/fonts/pewter-corroted/font.woff2") format("woff2"),
+    url("../assets/fonts/pewter-corroted/font.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 .custom-menu-items-container {
-  /* font-family: Arial, sans-serif !important; */
-  font-family: 'Pewter Corroted', sans-serif !important;
+  font-family: "Pewter Corroted", sans-serif !important;
   position: relative;
 }
 
-
 .content-container {
-    position: relative;
-    /* border-left: 1px solid white;
+  position: relative;
+  /* border-left: 1px solid white;
     border-right: 1px solid white;
     border-bottom: 1px solid white; */
-    padding-top: 10px !important;
-    margin-top: 20px !important;
+  padding-top: 10px !important;
+  margin-top: 20px !important;
+  margin: auto;
+}
+
+.content {
+  padding: 20px; /* Padding for content inside the container */
+  /* color: white;  */
+  font-weight: "600";
+}
+
+.content-container::before,
+.content-container::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  height: 1px; /* Border height */
+  /* background-color: white; Color of the top border */
+}
+
+.content-container::before {
+  left: 0;
+  width: 45%; /* Left segment width */
+}
+
+.content-container::after {
+  right: 0;
+  width: 45%; /* Right segment width */
+}
+
+.gap-text {
+  position: absolute;
+  /* top: -11px; Position the text above the top border */
+  left: 50%; /* Center the text horizontally */
+  transform: translateX(-50%); /* Adjust the centering */
+  /* color: blue;  */
+  text-align: center;
+  /* font-size: 1.5rem; Font size */
+  z-index: 1; /* Ensure the text appears above the borders */
+  width: 100%;
+}
+@media print {
+  * {
+    -webkit-print-color-adjust: exact;
+    print-color-adjust: exact;
+  }
+  #root {
+    padding: 0 !important;
+  }
+  .app-container {
+    padding: 0 !important;
+  }
+  .custom-menu-items-container {
+    font-family: Arial, sans-serif;
+    position: relative;
+    width: 100% !important;
+    /* padding: 0 !important; */
+    margin: auto !important;
+  }
+  .container-final-step {
+    display: flex;
+    gap: 20px;
+    width: auto;
     margin: auto;
+    background: rgba(22, 19, 19, 0.93);
+    padding: 0 !important;
+    border-radius: 0;
+    box-shadow: none;
   }
-  
-  .content {
-    padding: 20px; /* Padding for content inside the container */
-    /* color: white;  */
-    font-weight: "600"
+  .print {
+    display: block;
   }
-  
-  .content-container::before,
-  .content-container::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    height: 1px; /* Border height */
-    /* background-color: white; Color of the top border */
+  .no-print {
+    display: none !important;
   }
-  
-  .content-container::before {
-    left: 0;
-    width: 45%; /* Left segment width */
-  
+  .confirmation {
+    background-color: white;
   }
-  
-  .content-container::after {
-    right: 0;
-    width: 45%; /* Right segment width */
+
+  .footer-container {
+    display: flex;
+    flex-direction: column;
   }
-  
-  .gap-text {
-    position: absolute;
-    /* top: -11px; Position the text above the top border */
-    left: 50%; /* Center the text horizontally */
-    transform: translateX(-50%); /* Adjust the centering */
-    /* color: blue;  */
-    text-align: center;
-    /* font-size: 1.5rem; Font size */
-    z-index: 1; /* Ensure the text appears above the borders */
-    width: 100%;
-  }
-  @media print {
-    * {
-      -webkit-print-color-adjust: exact;
-      print-color-adjust: exact;
-    }
-    #root {
-      padding: 0 !important;
-    }
-    .app-container {
-        padding: 0 !important;
-      }
-    .custom-menu-items-container {
-      font-family: Arial, sans-serif;
-      position: relative;
-      width: 100% !important;
-      /* padding: 0 !important; */
-      margin: auto !important;
-    }
-    .container-final-step {
-      display: flex;
-      gap: 20px;
-      width: auto;
-      margin: auto;
-      background: rgba(22, 19, 19, 0.93);
-      padding: 0 !important;
-      border-radius: 0;
-      box-shadow: none;
-    }
-    .print {
-      display: block;
-    }
-    .no-print {
-      display: none !important;
-    }
-    .confirmation {
-      background-color: white;
-    }
-  
-    .footer-container {
-      display: flex;
-      flex-direction: column;
-    }
-  }
+}
