--- a/src/components/PreviewMenu.css
+++ b/src/components/PreviewMenu.css
@@ -1,10 +1,3 @@
-@font-face {
-  font-family: "Pewter Corroted";
-  src: url("../assets/fonts/PewterDEMO-KCFonts.ttf") format("truetype");
- line-height: 1;
- padding: 0;
-margin: 0;
-}
 .number {
   font-family: Arial, sans-serif;
 }
@@ -20,11 +13,10 @@ margin: 0;
 
 .container-final-step {
   display: flex;
- justify-content: center;  /* new */
+  justify-content: center;
   gap: 20px;
   width: fit-content;
   height: fit-content;
-  /* width: auto; */
   margin: auto;
   background: rgba(22, 19, 19, 0.93);
   padding: 20px;
@@ -59,13 +51,9 @@ margin: 0;
 .category-title {
   text-align: center;
   text-transform: uppercase;
-  font-family: "Pewter Corroted", sans-serif;
-  /* display: flex; */
-  /* align-items: baseline; */
 }
 .subtitle {
   text-align: center;
-  font-family: "Pewter Corroted", sans-serif;
 }
 .menu-item-div {
   text-transform: uppercase;
@@ -73,11 +61,6 @@ margin: 0;
 
 .menu-item-joined {
   list-style-type: none;
-}
-.soup-salad-label,
-.soup-salad-description {
-  font-family: "Pewter Corroted", sans-serif;
-
 }
 .category-list {
   width: 100%;
